--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-wrap: wrap;
 
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
+  @media screen and (min-width: 768px) {
+    margin-top: calc(-1 * var(--card-set-gap));
+    margin-left: calc(-1 * var(--card-set-gap));
+  }
 }
