--- a/sass/components/_section.scss
+++ b/sass/components/_section.scss
@@ -1,13 +1,21 @@
 .section {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding-bottom: 60px;
+  padding-top: 60px;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 94px;
+    padding-top: 94px;
+  }
 }
 
 .section-title {
   text-align: center;
-  margin-bottom: 50px;
-  font-size: 36px;
+  margin-bottom: 30px;
+  // margin-bottom: 50px;
+  font-size: 28px;
   line-height: 1.17;
   color: var(--modal-svg);
   font-weight: 700;
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+  }
 }
