--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,7 +1,16 @@
 .features-item {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
+  // flex-basis: calc(100% / 4 - 30px);
+  // margin-left: 30px;
+  // margin-top: 30px;
+  margin: 15px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 
   & .features-item__title {
     margin-bottom: 10px;
