--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -4,16 +4,21 @@
 
 .team-item {
   padding-bottom: 30px;
-  flex-basis: calc(100% / 4 - 30px);
-  margin-top: 30px;
-  margin-left: 30px;
-
+  width: 100%;
   border-radius: 0px 0px 4px 4px;
   box-shadow: var(--card-shadow);
+  margin: 15px;
   margin-top: var(--card-set-gap);
-  margin-left: var(--card-set-gap);
-
   background-color: var(--primary-white-color);
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+    // margin-left: var(--card-set-gap);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
 }
 
 .team-item .img {
