--- a/sass/layout/_work.scss
+++ b/sass/layout/_work.scss
@@ -1,5 +1,8 @@
 .work {
   padding-top: 0px;
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 
 .work-item {
@@ -28,11 +31,4 @@
   width: 100%;
   height: 70px;
   background-color: var(--work-rgba);
-}
-.card-set-list {
-  display: flex;
-  flex-wrap: wrap;
-
-  margin-top: calc(-1 * var(--card-set-gap));
-  margin-left: calc(-1 * var(--card-set-gap));
 }
