--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -7,12 +7,13 @@
   width: 100%;
   border-radius: 0px 0px 4px 4px;
   box-shadow: var(--card-shadow);
-  margin: 15px;
+
   margin-top: var(--card-set-gap);
   background-color: var(--primary-white-color);
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
+    margin-left: 30px;
     // margin-left: var(--card-set-gap);
   }
 
