--- a/sass/components/_social-link.scss
+++ b/sass/components/_social-link.scss
@@ -42,5 +42,7 @@
 }
 
 .team-join-footer {
-  justify-content: flex-start;
+  @media screen and (min-width: 1200px) {
+    justify-content: flex-start;
+  }
 }
