--- a/css/main.css
+++ b/css/main.css
@@ -112,8 +112,6 @@ textarea {
 }
 
 .container {
-  border: 1px solid red;
-  max-width: 100%;
   padding-right: 15px;
   padding-left: 15px;
   margin-left: auto;
@@ -145,24 +143,19 @@ textarea {
   color: var(--accent-color);
 }
 
-.logo .logo--accent-black {
+.logo--accent-black {
   color: var(--title-text-color);
 }
 
-.logo .logo--accent-white {
+.logo--accent-white {
   color: var(--primary-white-color);
 }
 
 .card-set-list {
   display: flex;
   flex-wrap: wrap;
-}
-
-@media screen and (min-width: 768px) {
-  .card-set-list {
-    margin-top: calc(-1 * var(--card-set-gap));
-    margin-left: calc(-1 * var(--card-set-gap));
-  }
+  margin-top: calc(-1 * var(--card-set-gap));
+  margin-left: calc(-1 * var(--card-set-gap));
 }
 
 .section {
@@ -231,8 +224,10 @@ textarea {
   height: 20px;
 }
 
-.team-join-footer {
-  justify-content: flex-start;
+@media screen and (min-width: 1200px) {
+  .team-join-footer {
+    justify-content: flex-start;
+  }
 }
 
 .header {
@@ -399,6 +394,7 @@ textarea {
 
 .features-item {
   margin-top: 30px;
+  margin-left: 30px;
 }
 
 @media screen and (min-width: 768px) {
@@ -442,7 +438,14 @@ textarea {
 }
 
 .work {
+  display: none;
   padding-top: 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .work {
+    display: block;
+  }
 }
 
 .work-item {
@@ -482,6 +485,7 @@ textarea {
   border-radius: 0px 0px 4px 4px;
   box-shadow: var(--card-shadow);
   margin-top: var(--card-set-gap);
+  margin-left: 30px;
   background-color: var(--primary-white-color);
 }
 
@@ -515,34 +519,21 @@ textarea {
   color: var(--primary-text-color);
 }
 
-.clients {
-  justify-content: space-between;
-}
-
-@media screen and (min-width: 768px) {
-  .clients {
-    justify-content: normal;
-  }
-}
-
 .clients .item {
-  display: inline-flex;
-  flex-wrap: wrap;
+  display: flex;
   margin-top: 30px;
+  margin-left: 27px;
   flex-basis: calc(100% / 2 - 30px);
 }
 
 @media screen and (min-width: 768px) {
   .clients .item {
-    margin-left: 29px;
     flex-basis: calc(100% / 3 - 30px);
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients .item {
-    display: flex;
-    margin-left: 29px;
     flex-basis: calc(100% / 6 - 30px);
   }
 }
@@ -557,8 +548,7 @@ textarea {
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  width: 210px;
-  height: 92px;
+  padding: 16px 52px;
   fill: var(--team-svg);
   border-radius: 4px;
   border: 1px solid var(--team-svg);
@@ -572,13 +562,13 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .clients-svg-bg {
-    width: 226px;
+    padding: 16px 60px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients-svg-bg {
-    width: 170px;
+    padding: 16px 32px;
   }
 }
 
@@ -588,20 +578,68 @@ textarea {
   background: var(--footer-buck-color);
 }
 
-.footer .container {
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    display: flex;
+    align-items: baseline;
+  }
+}
+
+.footer-box {
   display: flex;
-  align-items: baseline;
+  flex-direction: column;
+  align-items: center;
 }
 
 .footer-box:not(:last-child) {
-  margin-right: 70px;
+  margin-bottom: 60px;
 }
 
-.footer-box:last-child {
-  margin-left: auto;
+@media screen and (min-width: 1200px) {
+  .footer-box:not(:last-child) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-box {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-box:not(:last-child) {
+    margin-right: 70px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-box:last-child {
+    margin-left: auto;
+  }
+}
+
+.form-center {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media screen and (min-width: 768px) {
+  .form-center {
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .form-center {
+    display: inline;
+  }
 }
 
 .footer-contact {
+  text-align: center;
   text-decoration: none;
   line-height: 171%;
   /* or 171% */
@@ -609,6 +647,12 @@ textarea {
   color: var(--primary-white-color);
   font-style: normal;
   padding-left: 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-contact {
+    text-align: left;
+  }
 }
 
 .footer-contact .item:not(:last-child) {
@@ -639,19 +683,33 @@ textarea {
 
 .footer-input {
   cursor: pointer;
-  margin-right: 12px;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 15px;
   padding-bottom: 15px;
+  margin-bottom: 20px;
   height: 50px;
-  width: 358px;
+  width: 100%;
   background-color: transparent;
   border: 1px solid var(--footer-input-border);
   box-sizing: border-box;
   filter: drop-shadow(var(--button-submit-shadow));
   border-radius: 4px;
   color: var(--primary-white-color);
+}
+
+@media screen and (min-width: 768px) {
+  .footer-input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-input {
+    width: 358px;
+    margin-right: 12px;
+    margin-bottom: 0px;
+  }
 }
 
 .footer-button {
@@ -680,10 +738,23 @@ textarea {
 }
 
 .control {
-  justify-content: center;
   display: flex;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
   line-height: 160%;
+}
+
+@media screen and (min-width: 768px) {
+  .control {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .control {
+    margin-bottom: 50px;
+  }
 }
 
 .control .button.current {
@@ -694,7 +765,14 @@ textarea {
 
 .control .items:not(:last-child) {
   margin-right: 8px;
+  margin-bottom: 15px;
   align-items: center;
+}
+
+@media screen and (min-width: 768px) {
+  .control .items:not(:last-child) {
+    margin-bottom: 0px;
+  }
 }
 
 .control .button {
@@ -719,9 +797,20 @@ textarea {
 }
 
 .project-item {
-  flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .project-item {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project-item {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .project-wraper {
