--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,27 +1,20 @@
 .clients {
-  justify-content: space-between;
-
   @media screen and (min-width: 768px) {
-    justify-content: normal;
   }
 }
 
 .clients .item {
-  display: inline-flex;
-  flex-wrap: wrap;
+  display: flex;
 
   margin-top: 30px;
+  margin-left: 27px;
   flex-basis: calc(100% / 2 - 30px);
 
   @media screen and (min-width: 768px) {
-    margin-left: 29px;
     flex-basis: calc(100% / 3 - 30px);
   }
 
   @media screen and (min-width: 1200px) {
-    display: flex;
-    margin-left: 29px;
-
     flex-basis: calc(100% / 6 - 30px);
   }
 }
@@ -38,8 +31,8 @@
 
   cursor: pointer;
 
-  width: 210px;
-  height: 92px;
+  padding: 16px 52px;
+
   fill: var(--team-svg);
   border-radius: 4px;
   border: 1px solid var(--team-svg);
@@ -53,10 +46,10 @@
   }
 
   @media screen and (min-width: 768px) {
-    width: 226px;
+    padding: 16px 60px;
   }
 
   @media screen and (min-width: 1200px) {
-    width: 170px;
+    padding: 16px 32px;
   }
 }
