--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -2,6 +2,7 @@
   // flex-basis: calc(100% / 4 - 30px);
 
   margin-top: 30px;
+  margin-left: 30px;
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 2 - 30px);
