--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -1,9 +1,19 @@
 .control {
-  justify-content: center;
   display: flex;
+  flex-wrap: wrap;
 
-  margin-bottom: 50px;
+  margin-bottom: 40px;
+
   line-height: 160%;
+
+  @media screen and (min-width: 768px) {
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
 }
 
 .control .button.current {
@@ -14,7 +24,14 @@
 
 .control .items:not(:last-child) {
   margin-right: 8px;
+  margin-bottom: 15px;
   align-items: center;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0px;
+  }
+
+  @media screen and (min-width: 1200px) {
+  }
 }
 .control .button {
   align-items: center;
@@ -42,9 +59,16 @@
 }
 
 .project-item {
-  flex-basis: calc(100% / 3 - 30px);
   margin-top: 30px;
   margin-left: 30px;
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - 30px);
+  }
 }
 
 .project-wraper {
