--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -9,6 +9,7 @@
   box-shadow: var(--card-shadow);
 
   margin-top: var(--card-set-gap);
+  margin-left: 30px;
   background-color: var(--primary-white-color);
 
   @media screen and (min-width: 768px) {
