--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,8 +1,14 @@
 .logo {
   font-family: raleway;
-  font-size: 26px;
+  font-size: 24px;
+  line-height: 1.16;
   font-weight: 700;
   color: var(--accent-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 
   &--accent-black {
     color: var(--title-text-color);
