--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,7 +17,13 @@
   display: flex;
   line-height: 110%;
   letter-spacing: 0.02em;
-  margin-left: 93px;
+
+  @media screen and (min-width: 768px) {
+    margin-left: 88px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-left: 93px;
+  }
 }
 
 .site-nav .item + .item {
@@ -58,10 +64,18 @@
 }
 
 .contact {
-  display: flex;
   margin-left: auto;
   fill: var(--primary-text-color);
   color: var(--primary-text-color);
+
+  @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: flex-end;
+  }
 }
 
 .contact .contact__envelope {
@@ -79,17 +93,33 @@
 }
 
 .contact .item + .item {
-  margin-left: 50px;
+  @media screen and (min-width: 768px) {
+    margin-top: 10px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 50px;
+  }
 }
 
 .contact .link {
   font-weight: 500;
-  line-height: 110%;
+
   letter-spacing: 0.02em;
   display: flex;
   align-items: center;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+    line-height: 1.16;
+  }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 
   &:hover,
   &:focus {
