--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -5,9 +5,12 @@
 
 .clients .item {
   display: flex;
+  align-items: center;
+  justify-content: center;
 
   margin-top: 30px;
   margin-left: 27px;
+
   flex-basis: calc(100% / 2 - 30px);
 
   @media screen and (min-width: 768px) {
@@ -30,6 +33,9 @@
   justify-content: center;
 
   cursor: pointer;
+
+  // max-width: 210px;
+  // height: 90px;
 
   padding: 16px 52px;
 
