--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import './components/section';
 @import './components/social-link';
 @import './layout/header';
+@import './layout/mobile-menu';
 @import './layout/hero';
 @import './layout/features';
 @import './layout/work';
