--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 30px;
+  padding: 40px;
   background-color: var(--primary-white-color);
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
@@ -52,13 +52,13 @@
 
 .mobile-menu {
   padding: 0;
-  margin: 0;
+  margin-bottom: 306px;
   list-style: none;
 }
 
 .mobile-menu .link {
   display: block;
-  padding: 10px;
+  // padding: 10px;
 
   font-weight: 500;
   font-size: 40px;
@@ -70,4 +70,53 @@
   &:focus {
     color: var(--accent-color);
   }
+}
+
+.mobile-menu .link + .link {
+  margin-top: 32px;
+}
+
+.mob-menu-contact {
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 64px;
+
+  & .list + .list {
+    margin-top: 32px;
+  }
+}
+
+.mob-menu-contact-tel {
+  font-size: 34px;
+  line-height: 40px;
+  letter-spacing: 0.02em;
+
+  color: #2196f3;
+}
+
+.mob-menu-contact-env {
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 0.02em;
+
+  color: #757575;
+}
+
+.mob-menu-social {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-basis: calc(100% / 4);
+}
+
+.mob-menu-social .link {
+  font-size: 18px;
+  line-height: 22px;
+
+  letter-spacing: 0.02em;
+  color: #2196f3;
+}
+
+.mob-menu-social .list:not(:last-child) {
+  margin-right: 20px;
 }
