--- a/css/main.css
+++ b/css/main.css
@@ -419,7 +419,6 @@ textarea {
   border: none;
   border-radius: 50%;
   outline: none;
-  cursor: pointer;
 }
 
 .menu-toggle:hover,
@@ -551,15 +550,28 @@ textarea {
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/icons.svg/Img.jpg);
+  background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-mob-1x.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
+@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .overlay {
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-mob-2x.jpg);
+  }
+}
+
 @media screen and (min-width: 768px) {
   .overlay {
     max-width: 768px;
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-tab-1x.jpg);
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .overlay {
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-tab-2x.jpg);
   }
 }
 
@@ -568,6 +580,13 @@ textarea {
     max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-1x.jpg);
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .overlay {
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-2x.jpg);
   }
 }
 
@@ -682,6 +701,7 @@ textarea {
 }
 
 .team-item .img {
+  width: 100%;
   margin-bottom: 30px;
 }
 
