--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -53,18 +53,62 @@
       var(--linear-gradient),
       var(--linear-gradient)
     ),
-    url(../images/icons.svg/Img.jpg);
+    url(/images/stydea/hero/hero-mob-1x.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    background-image: linear-gradient(
+        to right,
+        var(--linear-gradient),
+        var(--linear-gradient)
+      ),
+      url(/images/stydea/hero/hero-mob-2x.jpg);
+  }
 
   @media screen and (min-width: 768px) {
     max-width: 768px;
+    background-image: linear-gradient(
+        to right,
+        var(--linear-gradient),
+        var(--linear-gradient)
+      ),
+      url(/images/stydea/hero/hero-tab-1x.jpg);
+
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          var(--linear-gradient),
+          var(--linear-gradient)
+        ),
+        url(/images/stydea/hero/hero-tab-2x.jpg);
+    }
   }
 
   @media screen and (min-width: 1200px) {
     max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
+
+    background-image: linear-gradient(
+        to right,
+        var(--linear-gradient),
+        var(--linear-gradient)
+      ),
+      url(/images/stydea/hero/hero-1x.jpg);
+    @media (min-device-pixel-ratio: 2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          var(--linear-gradient),
+          var(--linear-gradient)
+        ),
+        url(/images/stydea/hero/hero-2x.jpg);
+    }
   }
 }
