перезалил все кртинки jpg

--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,4 +1,5 @@
 .clients {
+  justify-content: center;
   @media screen and (min-width: 768px) {
   }
 }
@@ -11,7 +12,9 @@
   margin-top: 30px;
   margin-left: 27px;
 
-  flex-basis: calc(100% / 2 - 30px);
+  @media screen and (min-width: 480px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
 
   @media screen and (min-width: 768px) {
     flex-basis: calc(100% / 3 - 30px);
