--- a/css/main.css
+++ b/css/main.css
@@ -718,13 +718,22 @@ textarea {
   color: var(--primary-text-color);
 }
 
+.clients {
+  justify-content: center;
+}
+
 .clients .item {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 30px;
   margin-left: 27px;
-  flex-basis: calc(100% / 2 - 30px);
+}
+
+@media screen and (min-width: 480px) {
+  .clients .item {
+    flex-basis: calc(100% / 2 - 30px);
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -998,6 +1007,10 @@ textarea {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: var(--card-shadow);
+}
+
+.card-set-list-clients {
+  justify-content: center;
 }
 
 .project-item {
