--- a/css/main.css
+++ b/css/main.css
@@ -391,6 +391,8 @@ textarea {
 }
 
 .menu-container {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
@@ -400,6 +402,7 @@ textarea {
   background-color: var(--primary-white-color);
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  justify-content: space-between;
 }
 
 .menu-container.is-open {
@@ -439,12 +442,6 @@ textarea {
   color: #fff;
 }
 
-.mobile-menu {
-  padding: 0;
-  margin-bottom: 306px;
-  list-style: none;
-}
-
 .mobile-menu .link {
   display: block;
   font-weight: 500;
@@ -457,17 +454,15 @@ textarea {
   color: var(--accent-color);
 }
 
-.mobile-menu .link + .link {
+.mobile-menu .mobile-menu-item + .mobile-menu-item {
   margin-top: 32px;
 }
 
 .mob-menu-contact {
-  padding: 0;
-  margin-top: 0;
   margin-bottom: 64px;
 }
 
-.mob-menu-contact .list + .list {
+.mob-menu-contact .mob-menu-contact-tel + .mob-menu-contact-env {
   margin-top: 32px;
 }
 
@@ -499,8 +494,21 @@ textarea {
   color: #2196f3;
 }
 
-.mob-menu-social .list:not(:last-child) {
-  margin-right: 20px;
+.mob-menu-social-item {
+  display: flex;
+}
+
+.mob-menu-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mob-menu-social-item:not(:last-child)::after {
+  content: '';
+  display: inline-block;
+  margin-left: 10px;
+  width: 1px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
 }
 
 .hero {
@@ -1144,7 +1152,7 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
-  width: 528px;
+  width: 450px;
   min-height: 581px;
   padding: 40px;
   box-shadow: var(--shadow-modal);
@@ -1153,14 +1161,27 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+  }
+}
+
 .modal-tetle-text {
   font-weight: bold;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 150%;
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
   color: var(--modal-svg);
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-tetle-text {
+    font-size: 20px;
+    line-height: 23px;
+  }
 }
 
 .modal-input {
@@ -1240,6 +1261,18 @@ textarea {
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.modal-label-checkbox-text {
+  font-size: 11px;
+  line-height: 1.166;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-label-checkbox-text {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox-icon {
