--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -1,4 +1,6 @@
 .menu-container {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,6 +10,7 @@
   background-color: var(--primary-white-color);
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
+  justify-content: space-between;
 }
 
 .menu-container.is-open {
@@ -48,12 +51,6 @@
   color: #fff;
 }
 
-.mobile-menu {
-  padding: 0;
-  margin-bottom: 306px;
-  list-style: none;
-}
-
 .mobile-menu .link {
   display: block;
   // padding: 10px;
@@ -70,16 +67,14 @@
   }
 }
 
-.mobile-menu .link + .link {
+.mobile-menu .mobile-menu-item + .mobile-menu-item {
   margin-top: 32px;
 }
 
 .mob-menu-contact {
-  padding: 0;
-  margin-top: 0;
   margin-bottom: 64px;
 
-  & .list + .list {
+  & .mob-menu-contact-tel + .mob-menu-contact-env {
     margin-top: 32px;
   }
 }
@@ -115,6 +110,19 @@
   color: #2196f3;
 }
 
-.mob-menu-social .list:not(:last-child) {
-  margin-right: 20px;
+.mob-menu-social-item {
+  display: flex;
+}
+
+.mob-menu-social-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.mob-menu-social-item:not(:last-child)::after {
+  content: '';
+  display: inline-block;
+  margin-left: 10px;
+  width: 1px;
+  height: 22px;
+  background-color: rgba(33, 33, 33, 0.2);
 }
