--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -52,7 +52,7 @@
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
 
-  width: 528px;
+  width: 450px;
   min-height: 581px;
   padding: 40px;
   box-shadow: var(--shadow-modal);
@@ -60,17 +60,27 @@
   background-color: var(--primary-white-color);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
 
 .modal-tetle-text {
   font-weight: bold;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 150%;
+
   text-align: center;
   letter-spacing: 0.03em;
   margin-bottom: 12px;
 
   color: var(--modal-svg);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 20px;
+    line-height: 23px;
+  }
 }
 
 .modal-input {
@@ -154,6 +164,16 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
+}
+
+.modal-label-checkbox-text {
+  font-size: 11px;
+  line-height: 1.166;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .checkbox-icon {
