--- a/css/main.css
+++ b/css/main.css
@@ -558,7 +558,7 @@ textarea {
   max-width: 480px;
   margin-left: auto;
   margin-right: auto;
-  background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-mob-1x.jpg);
+  background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-mob-1x.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -566,20 +566,20 @@ textarea {
 
 @media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .overlay {
-    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-mob-2x.jpg);
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-mob-2x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) {
   .overlay {
     max-width: 768px;
-    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-tab-1x.jpg);
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-tab-1x.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .overlay {
-    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-tab-2x.jpg);
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-tab-2x.jpg);
   }
 }
 
@@ -588,13 +588,13 @@ textarea {
     max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-1x.jpg);
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-1x.jpg);
   }
 }
 
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .overlay {
-    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(/images/stydea/hero/hero-2x.jpg);
+    background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-2x.jpg);
   }
 }
 
