--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -53,7 +53,7 @@
       var(--linear-gradient),
       var(--linear-gradient)
     ),
-    url(/images/stydea/hero/hero-mob-1x.jpg);
+    url(../images/stydea/hero/hero-mob-1x.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -65,7 +65,7 @@
         var(--linear-gradient),
         var(--linear-gradient)
       ),
-      url(/images/stydea/hero/hero-mob-2x.jpg);
+      url(../images/stydea/hero/hero-mob-2x.jpg);
   }
 
   @media screen and (min-width: 768px) {
@@ -75,7 +75,7 @@
         var(--linear-gradient),
         var(--linear-gradient)
       ),
-      url(/images/stydea/hero/hero-tab-1x.jpg);
+      url(../images/stydea/hero/hero-tab-1x.jpg);
 
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
@@ -85,7 +85,7 @@
           var(--linear-gradient),
           var(--linear-gradient)
         ),
-        url(/images/stydea/hero/hero-tab-2x.jpg);
+        url(../images/stydea/hero/hero-tab-2x.jpg);
     }
   }
 
@@ -99,7 +99,7 @@
         var(--linear-gradient),
         var(--linear-gradient)
       ),
-      url(/images/stydea/hero/hero-1x.jpg);
+      url(../images/stydea/hero/hero-1x.jpg);
     @media (min-device-pixel-ratio: 2),
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
@@ -108,7 +108,7 @@
           var(--linear-gradient),
           var(--linear-gradient)
         ),
-        url(/images/stydea/hero/hero-2x.jpg);
+        url(../images/stydea/hero/hero-2x.jpg);
     }
   }
 }
