--- a/css/main.css
+++ b/css/main.css
@@ -244,6 +244,7 @@ textarea {
 }
 
 .header__container {
+  position: relative;
   display: flex;
   align-items: center;
 }
@@ -410,6 +411,8 @@ textarea {
 }
 
 .menu-toggle {
+  position: absolute;
+  right: 10px;
   min-height: 40px;
   min-width: 40px;
   display: flex;
@@ -484,7 +487,6 @@ textarea {
   padding: 0;
   margin: 0;
   display: flex;
-  flex-basis: calc(100% / 4);
 }
 
 .mob-menu-social .link {
@@ -555,7 +557,6 @@ textarea {
 }
 
 .overlay {
-  max-width: 480px;
   margin-left: auto;
   margin-right: auto;
   background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-mob-1x.jpg);
@@ -572,7 +573,6 @@ textarea {
 
 @media screen and (min-width: 768px) {
   .overlay {
-    max-width: 768px;
     background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-tab-1x.jpg);
   }
 }
@@ -585,7 +585,6 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .overlay {
-    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-1x.jpg);
@@ -1024,6 +1023,21 @@ textarea {
 .project-item {
   margin-top: 30px;
   margin-left: 30px;
+  display: block;
+  outline: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border: 1px solid;
+  border-color: var(--border-projecc);
+}
+
+.project-item:hover, .project-item:focus {
+  box-shadow: var(--project-shadow);
+}
+
+.project-item:focus .project-hover-text,
+.project-item:hover .project-hover-text {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 @media screen and (min-width: 768px) {
@@ -1060,22 +1074,6 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-item .link {
-  display: block;
-  outline: none;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.project-item .link:hover, .project-item .link:focus {
-  box-shadow: var(--project-shadow);
-}
-
-.project-item .link:focus .project-hover-text,
-.project-item .link:hover .project-hover-text {
-  transform: translateY(0);
-  opacity: 1;
-}
-
 .project-title {
   font-size: 18px;
   color: var(--title-text-color);
@@ -1090,8 +1088,6 @@ textarea {
   padding-bottom: 20px;
   padding-left: 24px;
   padding-right: 24px;
-  border: 1px solid;
-  border-color: var(--border-projecc);
 }
 
 .card-set .desk {
@@ -1152,7 +1148,8 @@ textarea {
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   min-height: 581px;
   padding: 40px;
   box-shadow: var(--shadow-modal);
@@ -1163,7 +1160,7 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .modal {
-    width: 528px;
+    max-width: 528px;
   }
 }
 
