--- a/sass/layout/_modal.scss
+++ b/sass/layout/_modal.scss
@@ -52,7 +52,8 @@
   transform: translate(-50%, -50%) scale(1);
   opacity: 1;
 
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   min-height: 581px;
   padding: 40px;
   box-shadow: var(--shadow-modal);
@@ -62,7 +63,7 @@
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   @media screen and (min-width: 1200px) {
-    width: 528px;
+    max-width: 528px;
   }
 }
 
