--- a/css/main.css
+++ b/css/main.css
@@ -585,6 +585,7 @@ textarea {
 
 @media screen and (min-width: 1200px) {
   .overlay {
+    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
     background-image: linear-gradient(to right, var(--linear-gradient), var(--linear-gradient)), url(../images/stydea/hero/hero-1x.jpg);
