--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -12,6 +12,12 @@
 .header__nav {
   display: flex;
   align-items: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+
+  @media (min-width: 768px) {
+    margin: 0;
+  }
 }
 
 .site-nav {
