--- a/sass/layout/_mobile-menu.scss
+++ b/sass/layout/_mobile-menu.scss
@@ -98,9 +98,9 @@
 }
 
 .mob-menu-social {
-  padding: 0;
-  margin: 0;
   display: flex;
+  flex-wrap: wrap;
+  margin-top: -10px;
 }
 
 .mob-menu-social .link {
@@ -113,6 +113,7 @@
 
 .mob-menu-social-item {
   display: flex;
+  margin-top: 10px;
 }
 
 .mob-menu-social-item:not(:last-child) {
