--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -60,6 +60,10 @@
 
 .card-set-list-clients {
   justify-content: center;
+
+  @media screen and (min-width: 768px) {
+    justify-content: flex-start;
+  }
 }
 
 .project-item {
@@ -120,23 +124,23 @@
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-// .project-item .link {
-//   display: block;
-//   outline: none;
+.project-item .link {
+  display: block;
+  outline: none;
 
-//   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-//   &:hover,
-//   &:focus {
-//     box-shadow: var(--project-shadow);
-//   }
+  &:hover,
+  &:focus {
+    box-shadow: var(--project-shadow);
+  }
 
-//   &:focus .project-hover-text,
-//   &:hover .project-hover-text {
-//     transform: translateY(0);
-//     opacity: 1;
-//   }
-// }
+  &:focus .project-hover-text,
+  &:hover .project-hover-text {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 
 .project-title {
   font-size: 18px;
