--- a/css/main.css
+++ b/css/main.css
@@ -1082,7 +1082,7 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   font-size: 18px;
   line-height: 156%;
   letter-spacing: 0.03em;
@@ -1091,9 +1091,24 @@ textarea {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media (min-width: 768px) {
+  .project-hover-text {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .project-hover-text {
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
+}
+
 .project-item .link {
   display: block;
   outline: none;
+  height: 100%;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
