--- a/sass/layout/_project.scss
+++ b/sass/layout/_project.scss
@@ -96,7 +96,7 @@
   width: 100%;
   height: 100%;
 
-  padding: 63px 24px;
+  padding: 77px 24px;
 
   font-size: 18px;
   line-height: 156%;
@@ -106,11 +106,22 @@
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
     opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media (min-width: 768px) {
+    padding-top: 49px;
+    padding-bottom: 49px;
+  }
+
+  @media (min-width: 1200px) {
+    padding-top: 63px;
+    padding-bottom: 63px;
+  }
 }
 
 .project-item .link {
   display: block;
   outline: none;
+  height: 100%;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
